--- a/src/package.json
+++ b/src/package.json
@@ -26,5 +26,10 @@
   },
   "homepage": "https://github.com/peymanmortazavi/MonkeyMaker.js#readme",
   "dependencies": {
+    "fs-extra": "^0.21.0",
+    "node-uuid": "^1.4.3",
+    "path": "^0.11.14",
+    "string-format": "^0.5.0",
+    "sync-exec": "^0.5.0"
   }
 }
