--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monkey-maker",
-  "version": "1.0.300",
+  "version": "1.0.304",
   "description": "Node.js library to easily create configs for Xamarin.iOS and Xamarin.Android projects.",
   "main": "monkey.js",
   "scripts": {
@@ -27,10 +27,12 @@
   "homepage": "https://github.com/peymanmortazavi/MonkeyMaker.js#readme",
   "dependencies": {
     "asyncawait": "^0.7.4",
+    "bluebird": "^2.9.33",
     "fs-extra": "^0.21.0",
     "node-uuid": "^1.4.3",
     "path": "^0.11.14",
     "string-format": "^0.5.0",
-    "sync-exec": "^0.5.0"
+    "sync-exec": "^0.5.0",
+    "xml2js": "^0.4.9"
   }
 }
