--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monkey-maker",
-  "version": "1.0.347",
+  "version": "1.0.4",
   "description": "Node.js library to easily create configs for Xamarin.iOS and Xamarin.Android projects.",
   "main": "monkey.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/peymanmortazavi/MonkeyMaker.js.git"
+    "url": "https://github.com/tablika/MonkeyMaker.git"
   },
   "keywords": [
     "xamarin",
@@ -22,9 +22,9 @@
   "author": "Peyman Mortazavi <pey.mortazavi@gmail.com> (https://www.linkedin.com/pub/peyman-mortazavi/50/b51/73b)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/peymanmortazavi/MonkeyMaker.js/issues"
+    "url": "https://github.com/tablika/MonkeyMaker/issues"
   },
-  "homepage": "https://github.com/peymanmortazavi/MonkeyMaker.js#readme",
+  "homepage": "https://github.com/tablika/MonkeyMaker#readme",
   "dependencies": {
     "asyncawait": "^0.7.4",
     "bluebird": "^2.9.33",
